--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /__pycache__
+trade-whisper-analysis-hub-main/trade-whisper-analysis-hub-main/.gitignoreZone.Identifier
+/trade-whisper-analysis-hub-main/trade-whisper-analysis-hub-main
