sort of working

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /__pycache__
 trade-whisper-analysis-hub-main/trade-whisper-analysis-hub-main/.gitignoreZone.Identifier
 /trade-whisper-analysis-hub-main/trade-whisper-analysis-hub-main
+~$Trade data_Petcoke (1).xlsx
